Added some correlations and some more ANOVAs

--- a/data/anova.ipynb
+++ b/data/anova.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "# ('StudyID', 'Training') (metric: RT)\n",
       "\n"
      ]
@@ -156,6 +157,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(9, 798) = 4.030, p = 0.0000\n",
+      "\n",
       "\n",
       "# ('StudyID', 'Training') (metric: AUC)\n",
       "\n"
@@ -254,6 +256,7 @@
      "text": [
       "Overall model F(9, 798) = 5.366, p = 0.0000\n",
       "\n",
+      "\n",
       "# ('StudyID', 'Training') (metric: AUC_word)\n",
       "\n"
      ]
@@ -350,6 +353,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(9, 394) = 0.956, p = 0.4765\n",
+      "\n",
       "\n",
       "# ('StudyID', 'Font') (metric: RT)\n",
       "\n"
@@ -448,6 +452,7 @@
      "text": [
       "Overall model F(3, 804) = 5.763, p = 0.0007\n",
       "\n",
+      "\n",
       "# ('StudyID', 'Font') (metric: AUC)\n",
       "\n"
      ]
@@ -539,6 +544,7 @@
      "text": [
       "Overall model F(3, 804) = 7.025, p = 0.0001\n",
       "\n",
+      "\n",
       "# ('StudyID', 'Font') (metric: AUC_word)\n",
       "\n"
      ]
@@ -629,6 +635,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(3, 400) = 1.076, p = 0.3591\n",
+      "\n",
       "\n",
       "# ('StudyID', 'Firstfont') (metric: RT)\n",
       "\n"
@@ -727,6 +734,7 @@
      "text": [
       "Overall model F(3, 804) = 4.962, p = 0.0020\n",
       "\n",
+      "\n",
       "# ('StudyID', 'Firstfont') (metric: AUC)\n",
       "\n"
      ]
@@ -823,6 +831,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(3, 804) = 7.548, p = 0.0001\n",
+      "\n",
       "\n",
       "# ('StudyID', 'Firstfont') (metric: AUC_word)\n",
       "\n"
@@ -921,6 +930,7 @@
      "text": [
       "Overall model F(3, 400) = 1.523, p = 0.2081\n",
       "\n",
+      "\n",
       "# ('Training', 'Font') (metric: RT)\n",
       "\n"
      ]
@@ -1018,6 +1028,7 @@
      "text": [
       "Overall model F(9, 798) = 4.987, p = 0.0000\n",
       "\n",
+      "\n",
       "# ('Training', 'Font') (metric: AUC)\n",
       "\n"
      ]
@@ -1109,6 +1120,7 @@
      "text": [
       "Overall model F(9, 798) = 2.517, p = 0.0076\n",
       "\n",
+      "\n",
       "# ('Training', 'Font') (metric: AUC_word)\n",
       "\n"
      ]
@@ -1199,6 +1211,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(9, 394) = 1.077, p = 0.3790\n",
+      "\n",
       "\n",
       "# ('Training', 'Firstfont') (metric: RT)\n",
       "\n"
@@ -1297,6 +1310,7 @@
      "text": [
       "Overall model F(9, 798) = 4.759, p = 0.0000\n",
       "\n",
+      "\n",
       "# ('Training', 'Firstfont') (metric: AUC)\n",
       "\n"
      ]
@@ -1393,6 +1407,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(9, 798) = 5.876, p = 0.0000\n",
+      "\n",
       "\n",
       "# ('Training', 'Firstfont') (metric: AUC_word)\n",
       "\n"
@@ -1491,6 +1506,7 @@
      "text": [
       "Overall model F(9, 394) = 1.795, p = 0.0674\n",
       "\n",
+      "\n",
       "# ('Font', 'Firstfont') (metric: RT)\n",
       "\n"
      ]
@@ -1588,6 +1604,7 @@
      "text": [
       "Overall model F(3, 804) = 9.915, p = 0.0000\n",
       "\n",
+      "\n",
       "# ('Font', 'Firstfont') (metric: AUC)\n",
       "\n"
      ]
@@ -1678,6 +1695,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(3, 804) = 0.864, p = 0.4594\n",
+      "\n",
       "\n",
       "# ('Font', 'Firstfont') (metric: AUC_word)\n",
       "\n"
@@ -1771,6 +1789,7 @@
       "Overall model F(3, 400) = 0.938, p = 0.4220\n",
       "\n",
       "______________________________\n",
+      "\n",
       "# ('StudyID', 'Training', 'Font') (metric: RT)\n",
       "\n"
      ]
@@ -1911,6 +1930,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(19, 788) = 2.935, p = 0.0000\n",
+      "\n",
       "\n",
       "# ('StudyID', 'Training', 'Font') (metric: AUC)\n",
       "\n"
@@ -2053,6 +2073,7 @@
      "text": [
       "Overall model F(19, 788) = 2.673, p = 0.0001\n",
       "\n",
+      "\n",
       "# ('StudyID', 'Training', 'Font') (metric: AUC_word)\n",
       "\n"
      ]
@@ -2193,6 +2214,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(19, 384) = 1.051, p = 0.4013\n",
+      "\n",
       "\n",
       "# ('StudyID', 'Training', 'Firstfont') (metric: RT)\n",
       "\n"
@@ -2335,6 +2357,7 @@
      "text": [
       "Overall model F(19, 788) = 3.545, p = 0.0000\n",
       "\n",
+      "\n",
       "# ('StudyID', 'Training', 'Firstfont') (metric: AUC)\n",
       "\n"
      ]
@@ -2475,6 +2498,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(19, 788) = 4.822, p = 0.0000\n",
+      "\n",
       "\n",
       "# ('StudyID', 'Training', 'Firstfont') (metric: AUC_word)\n",
       "\n"
@@ -2617,6 +2641,7 @@
      "text": [
       "Overall model F(19, 384) = 1.431, p = 0.1082\n",
       "\n",
+      "\n",
       "# ('StudyID', 'Font', 'Firstfont') (metric: RT)\n",
       "\n"
      ]
@@ -2757,6 +2782,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(7, 800) = 5.891, p = 0.0000\n",
+      "\n",
       "\n",
       "# ('StudyID', 'Font', 'Firstfont') (metric: AUC)\n",
       "\n"
@@ -2899,6 +2925,7 @@
      "text": [
       "Overall model F(7, 800) = 3.980, p = 0.0003\n",
       "\n",
+      "\n",
       "# ('StudyID', 'Font', 'Firstfont') (metric: AUC_word)\n",
       "\n"
      ]
@@ -3039,6 +3066,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(7, 396) = 1.634, p = 0.1242\n",
+      "\n",
       "\n",
       "# ('Training', 'Font', 'Firstfont') (metric: RT)\n",
       "\n"
@@ -3181,6 +3209,7 @@
      "text": [
       "Overall model F(19, 788) = 3.595, p = 0.0000\n",
       "\n",
+      "\n",
       "# ('Training', 'Font', 'Firstfont') (metric: AUC)\n",
       "\n"
      ]
@@ -3321,6 +3350,7 @@
      "output_type": "stream",
      "text": [
       "Overall model F(19, 788) = 3.027, p = 0.0000\n",
+      "\n",
       "\n",
       "# ('Training', 'Font', 'Firstfont') (metric: AUC_word)\n",
       "\n"
@@ -3470,7 +3500,7 @@
     "factors = [\"StudyID\", \"Training\", \"Font\", \"Firstfont\"]\n",
     "metrics = [\"RT\", \"AUC\", \"AUC_word\"]\n",
     "\n",
-    "def anova(factor, metrics, no):\n",
+    "def anova(st, factors, metrics, no):\n",
     "    for f in combinations(factors, no):\n",
     "        if f[0] != f[1]:\n",
     "            f_ = [\"C(%s)\" % x for x in f]\n",
@@ -3488,9 +3518,221 @@
     "                print(f\"Overall model F(%d, %d) = %.3f, p = %.4f\" % (model.df_model, model.df_resid, model.fvalue, model.f_pvalue))\n",
     "                print()\n",
     "\n",
-    "anova(factors, metrics, 2)\n",
+    "anova(st, factors, metrics, 2)\n",
     "print(30 * \"_\")\n",
-    "anova(factors, metrics, 3)"
+    "anova(st, factors, metrics, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# ('StudyID', 'isDesigner') (metric: AUC)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "      <th>eta_sq</th>\n",
+       "      <th>omega_sq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(StudyID)</th>\n",
+       "      <td>0.065010</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.372588</td>\n",
+       "      <td>0.000818</td>\n",
+       "      <td>0.026854</td>\n",
+       "      <td>0.024435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(isDesigner)</th>\n",
+       "      <td>0.032483</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.682478</td>\n",
+       "      <td>0.017601</td>\n",
+       "      <td>0.013418</td>\n",
+       "      <td>0.011031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(StudyID):C(isDesigner)</th>\n",
+       "      <td>0.036852</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.446693</td>\n",
+       "      <td>0.011494</td>\n",
+       "      <td>0.015222</td>\n",
+       "      <td>0.012831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>2.286540</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            sum_sq     df          F    PR(>F)    eta_sq  \\\n",
+       "C(StudyID)                0.065010    1.0  11.372588  0.000818  0.026854   \n",
+       "C(isDesigner)             0.032483    1.0   5.682478  0.017601  0.013418   \n",
+       "C(StudyID):C(isDesigner)  0.036852    1.0   6.446693  0.011494  0.015222   \n",
+       "Residual                  2.286540  400.0        NaN       NaN       NaN   \n",
+       "\n",
+       "                          omega_sq  \n",
+       "C(StudyID)                0.024435  \n",
+       "C(isDesigner)             0.011031  \n",
+       "C(StudyID):C(isDesigner)  0.012831  \n",
+       "Residual                       NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall model F(3, 400) = 7.919, p = 0.0000\n",
+      "\n",
+      "\n",
+      "# ('StudyID', 'isDesigner') (metric: Correct)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "      <th>eta_sq</th>\n",
+       "      <th>omega_sq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(StudyID)</th>\n",
+       "      <td>0.081044</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.082991</td>\n",
+       "      <td>0.008095</td>\n",
+       "      <td>0.016296</td>\n",
+       "      <td>0.013963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(isDesigner)</th>\n",
+       "      <td>0.267816</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>23.406214</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.053852</td>\n",
+       "      <td>0.051433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(StudyID):C(isDesigner)</th>\n",
+       "      <td>0.047471</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.148769</td>\n",
+       "      <td>0.042323</td>\n",
+       "      <td>0.009545</td>\n",
+       "      <td>0.007228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>4.576830</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            sum_sq     df          F    PR(>F)    eta_sq  \\\n",
+       "C(StudyID)                0.081044    1.0   7.082991  0.008095  0.016296   \n",
+       "C(isDesigner)             0.267816    1.0  23.406214  0.000002  0.053852   \n",
+       "C(StudyID):C(isDesigner)  0.047471    1.0   4.148769  0.042323  0.009545   \n",
+       "Residual                  4.576830  400.0        NaN       NaN       NaN   \n",
+       "\n",
+       "                          omega_sq  \n",
+       "C(StudyID)                0.013963  \n",
+       "C(isDesigner)             0.051433  \n",
+       "C(StudyID):C(isDesigner)  0.007228  \n",
+       "Residual                       NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall model F(3, 400) = 11.682, p = 0.0000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "anova(st[st[\"Type\"] == \"lexical\"], [\"StudyID\", \"isDesigner\"], [\"AUC\", \"Correct\"], 2)"
    ]
   },
   {
