Updated the normalization techniques for AUC, expanded the analysis, removed ANOVA

--- a/data/correlation.ipynb
+++ b/data/correlation.ipynb
@@ -2,29 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading 15768 lines of data (outliers replaced).\n",
       "Loading 876 lines of stats.\n"
      ]
     }
    ],
    "source": [
-    "import glob\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import scipy.stats as scst\n",
-    "import pylab \n",
-    "\n",
-    "datafilename = \"data_processed-outliers-replaced.csv\"\n",
-    "d = pd.read_csv(datafilename)\n",
-    "print(\"Loading\", len(d), \"lines of data (outliers replaced).\")\n",
+    "import pingouin as pg\n",
     "\n",
     "resultsfilename = \"data_stats-outliers-replaced.csv\"\n",
     "st = pd.read_csv(resultsfilename)\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -58,51 +49,105 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>RT</th>\n",
-       "      <th>AUC</th>\n",
+       "      <th>n</th>\n",
+       "      <th>r</th>\n",
+       "      <th>CI95%</th>\n",
+       "      <th>r2</th>\n",
+       "      <th>adj_r2</th>\n",
+       "      <th>p-val</th>\n",
+       "      <th>BF10</th>\n",
+       "      <th>power</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>RT</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.056626</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AUC</th>\n",
-       "      <td>0.056626</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>pearson</th>\n",
+       "      <td>464</td>\n",
+       "      <td>0.057</td>\n",
+       "      <td>[-0.03, 0.15]</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>-0.001</td>\n",
+       "      <td>0.223435</td>\n",
+       "      <td>0.122</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           RT       AUC\n",
-       "RT   1.000000  0.056626\n",
-       "AUC  0.056626  1.000000"
+       "           n      r          CI95%     r2  adj_r2     p-val   BF10  power\n",
+       "pearson  464  0.057  [-0.03, 0.15]  0.003  -0.001  0.223435  0.122   0.23"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficient: 0.057, p-value: 0.2234\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>outliers</th>\n",
+       "      <th>r</th>\n",
+       "      <th>CI95%</th>\n",
+       "      <th>r2</th>\n",
+       "      <th>adj_r2</th>\n",
+       "      <th>p-val</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>shepherd</th>\n",
+       "      <td>464</td>\n",
+       "      <td>24</td>\n",
+       "      <td>-0.002</td>\n",
+       "      <td>[-0.09, 0.09]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.004</td>\n",
+       "      <td>0.970453</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            n  outliers      r          CI95%   r2  adj_r2     p-val  power\n",
+       "shepherd  464        24 -0.002  [-0.09, 0.09]  0.0  -0.004  0.970453   0.05"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "designers = st[st[\"isDesigner\"]]\n",
-    "display(designers[[\"RT\", \"AUC\"]].corr())\n",
-    "print(\"Coefficient: %.3f, p-value: %.4f\" % scst.pearsonr(designers[\"RT\"], designers[\"AUC\"]))"
+    "display(pg.corr(designers[\"RT\"], designers[\"AUC\"]))\n",
+    "display(pg.corr(designers[\"RT\"], designers[\"AUC\"], method=\"shepherd\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -126,47 +171,108 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>RT</th>\n",
-       "      <th>AUC</th>\n",
+       "      <th>n</th>\n",
+       "      <th>r</th>\n",
+       "      <th>CI95%</th>\n",
+       "      <th>r2</th>\n",
+       "      <th>adj_r2</th>\n",
+       "      <th>p-val</th>\n",
+       "      <th>BF10</th>\n",
+       "      <th>power</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>RT</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.009999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AUC</th>\n",
-       "      <td>0.009999</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>pearson</th>\n",
+       "      <td>412</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>[-0.09, 0.11]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.005</td>\n",
+       "      <td>0.839647</td>\n",
+       "      <td>0.063</td>\n",
+       "      <td>0.055</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           RT       AUC\n",
-       "RT   1.000000  0.009999\n",
-       "AUC  0.009999  1.000000"
+       "           n     r          CI95%   r2  adj_r2     p-val   BF10  power\n",
+       "pearson  412  0.01  [-0.09, 0.11]  0.0  -0.005  0.839647  0.063  0.055"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficient: 0.010, p-value: 0.8396\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>outliers</th>\n",
+       "      <th>r</th>\n",
+       "      <th>CI95%</th>\n",
+       "      <th>r2</th>\n",
+       "      <th>adj_r2</th>\n",
+       "      <th>p-val</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>shepherd</th>\n",
+       "      <td>412</td>\n",
+       "      <td>25</td>\n",
+       "      <td>-0.024</td>\n",
+       "      <td>[-0.12, 0.07]</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>-0.004</td>\n",
+       "      <td>0.638975</td>\n",
+       "      <td>0.077</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            n  outliers      r          CI95%     r2  adj_r2     p-val  power\n",
+       "shepherd  412        25 -0.024  [-0.12, 0.07]  0.001  -0.004  0.638975  0.077"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "nondesigners = st[st[\"isDesigner\"] == False]\n",
-    "display(nondesigners[[\"RT\", \"AUC\"]].corr())\n",
-    "print(\"Coefficient: %.3f, p-value: %.4f\" % scst.pearsonr(nondesigners[\"RT\"], nondesigners[\"AUC\"]))"
+    "display(pg.corr(nondesigners[\"RT\"], nondesigners[\"AUC\"]))\n",
+    "display(pg.corr(nondesigners[\"RT\"], nondesigners[\"AUC\"], method=\"shepherd\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
