Added Ordertype column

--- a/notebooks/1 Process raw data.ipynb
+++ b/notebooks/1 Process raw data.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
     "    d.loc[i] = rd\n",
     "            \n",
     "# add normalized RT\n",
-    "d[\"RTnorm\"] = normalize_RT(d[\"RT\"])"
+    "d[\"RTnorm\"] = normalize_rt(d[\"RT\"])"
    ]
   },
   {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
     "    # Prefill results\n",
     "    # aggregate correct-ness and response times (use mean value)\n",
     "    # keep the rest as is or set NaN value for new columns\n",
-    "    result_columns = [\"StudyID\", \"ParticipantID\", \"TestID\", \"Type\", \"TaskID\", \"Order\", \"Ordertype\",\n",
+    "    result_columns = [\"StudyID\", \"ParticipantID\", \"TestID\", \"TaskID\", \"Type\", \"Order\", \"Ordertype\",\n",
     "                      \"Firstfont\",\n",
     "                      \"Fluent\", \"Training\", \"isDesigner\", \"Font\", \"Correct\", \"RT\", \"RTnorm\",\n",
     "                      \"RT_word\", \"RT_nonword\", \"RTnorm_word\", \"RTnorm_nonword\",\n",
@@ -421,6 +421,8 @@
     "                        else:\n",
     "                            print(\"This should not happen\", tid, order)\n",
     "                    results.loc[(sid, pid, tid, ttype), \"TaskID\"] = taskid\n",
+    "                    ffont = results.loc[(sid, pid, tid, ttype), \"Firstfont\"]\n",
+    "                    results.loc[(sid, pid, tid, ttype), \"Ordertype\"] = int(ffont == \"arial\") + 1\n",
     "                    \n",
     "                    # Calculate the AUC\n",
     "                    # figure out which category and index to use for this test type\n",
@@ -466,6 +468,7 @@
     "    results.reset_index(inplace=True)\n",
     "    # fix column type\n",
     "    results[\"TaskID\"] = results[\"TaskID\"].astype(\"int\")\n",
+    "    results[\"Ordertype\"] = results[\"Ordertype\"].astype(\"int\")\n",
     "    return results\n",
     "\n",
     "aggregated = get_agg_results(d)"
@@ -473,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -511,8 +514,8 @@
      "output_type": "stream",
      "text": [
       "Replaced 557 outliers\n",
-      "Replacing outliers changes the global normalized mean from 7.719 to 7.719\n",
-      "Replacing outliers changes the global mean from 2642.310 to 2642.310\n"
+      "Replacing outliers changes the global normalized mean from 7.756 to 7.719\n",
+      "Replacing outliers changes the global mean from 4017.465 to 2642.310\n"
      ]
     }
    ],
@@ -552,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
