--- a/notebooks/1 Process raw data.ipynb
+++ b/notebooks/1 Process raw data.ipynb
@@ -6,17 +6,24 @@
    "source": [
     "# Convert and evaluate raw data\n",
     "\n",
-    "Converting the data from its raw form returned by the website to a form better suited for statistical analysis and subsequent aggregation.\n",
+    "- convert data from its raw form returned by the website\n",
+    "- aggregate data per task\n",
     "\n",
     "The processed data looks like this:\n",
     "\n",
+    "- non-aggregated, one row per trial (there are 72 trials in each session)\n",
+    "- aggregated, one row per task (there are 4 tasks in each session)\n",
+    "\n",
     "### Columns used for indexing\n",
     "\n",
-    "- `StudyID` (int), 0 refers to pilot study, 1 and 2 refer to studies #1 and #2 which had a different study format (see our report)\n",
-    "- `ParticipantID` (int, 0 and higher)\n",
-    "- `TestID` (int, 1 or 2) the first or second part/test of the study (this is called a “study part” in our report)\n",
-    "- `Type` (“lexical” or “recognition”) identifies a task within a part/test, the lexical task is always the first and the recognition task is always the second\n",
-    "- `Trial ID` (int, positive) for individual trials in the non-aggregated data\n",
+    "A study (StudyID) was conducted in sessions, one session per participant (ParticipantID). One session consists of two parts/tests (TestID). Each of these tests contains two tasks (TaskID in the aggregated data): a lexical task followed by a recognition task (Type). Each of these tasks is made of trials (TrialID) where an item (a sample text in specific font) is shown to the participant and a response is collected. Each lexical task is made of 20 trials. Each recognition task is made of 16 trials. There was an introductory questionnaire and two questionnaires after each lexical tasks.\n",
+    "\n",
+    "- `StudyID` (int), 0 refers to pilot study, 1 and 2 refer to studies #1 and #2 which had a different intention (see our report), but follow the same format\n",
+    "- `ParticipantID` (int, 0 and higher) for a session (all trials) completed by one participant\n",
+    "- `TestID` (int, 1 or 2) for one of the two tests (this is called a “study part” in our report) in a session\n",
+    "- `Type` (“lexical” or “recognition”) a task type for one of the two tasks in a part/test, the lexical task is always the first and the recognition task is always the second\n",
+    "- `Trial ID` (int, positive) for individual trials, used only in the non-aggregated data\n",
+    "- `Task ID` (int, 1–4) for the four tasks (lexical, recognition, lexical, recognition) that make up a single study session, used only in the aggregated data\n",
     "\n",
     "### Columns with responses from the introduction\n",
     "\n",
@@ -40,6 +47,7 @@
     "- all columns above and\n",
     "- `Task ID` (int, 1–4) the order of tasks within a single study session, for the same single participant\n",
     "- `Order` (int, 1 or 2) to specify the order of tasks in a study session\n",
+    "- `Ordertype` (int, 1 or 2) whether Arial was the first typeface\n",
     "- `Firstfont` (str) the first font the participant had seen\n",
     "- `isDesigner` (bool) whether participants belong to one of the categories of designers, based on `Training`\n",
     "- `RT_word` (float) mean response time for words only\n",
