Cleaned up notebooks 3–4 and re-run them again

--- a/notebooks/1 Process raw data.ipynb
+++ b/notebooks/1 Process raw data.ipynb
@@ -83,6 +83,8 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
+    "alpha = 0.05\n",
+    "\n",
     "# set up a DataFrame to collect the processed data\n",
     "columns = [\n",
     "    \"StudyID\", \"ParticipantID\", \"Fluent\", \"Training\",\n",
