--- a/notebooks/2 Descriptive statistics.ipynb
+++ b/notebooks/2 Descriptive statistics.ipynb
@@ -30,6 +30,8 @@
     "import pingouin as pg\n",
     "import os\n",
     "\n",
+    "alpha = 0.05\n",
+    "\n",
     "d = pd.read_csv(os.path.join(\"..\", \"data\", \"data.csv\"), index_col=0)\n",
     "agg = pd.read_csv(os.path.join(\"..\", \"data\", \"data_aggregated.csv\"), index_col=0)\n",
     "aggwo = pd.read_csv(os.path.join(\"..\", \"data\", \"data_outliers-replaced_aggregated.csv\"), index_col=0)\n",
