--- a/notebooks/5 Exploration of correlations.ipynb
+++ b/notebooks/5 Exploration of correlations.ipynb
@@ -1,31 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploration of correlations\n",
+    "\n",
+    "A few snippets exploring various possible correlations in the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading 876 lines of stats.\n"
+      "Loading: 876 lines 219 participants\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import pingouin as pg\n",
+    "import os\n",
     "\n",
-    "resultsfilename = \"data_stats-outliers-replaced.csv\"\n",
-    "st = pd.read_csv(resultsfilename)\n",
-    "print(\"Loading\", len(st), \"lines of stats.\")\n",
+    "alpha = 0.05\n",
+    "\n",
+    "st = pd.read_csv(os.path.join(\"..\", \"data\", \"data_aggregated.csv\"), index_col=0)\n",
+    "#st = pd.read_csv(os.path.join(\"..\", \"data\", \"data_outliers-replaced_aggregated.csv\"), index_col=0)\n",
+    "\n",
+    "print(\"Loading:\", len(st), \"lines\", len(st[\"ParticipantID\"].unique()), \"participants\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,21 +76,24 @@
        "    <tr>\n",
        "      <th>pearson</th>\n",
        "      <td>464</td>\n",
-       "      <td>0.057</td>\n",
-       "      <td>[-0.03, 0.15]</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>-0.001</td>\n",
-       "      <td>0.223435</td>\n",
-       "      <td>0.122</td>\n",
-       "      <td>0.23</td>\n",
+       "      <td>-0.024295</td>\n",
+       "      <td>[-0.12, 0.07]</td>\n",
+       "      <td>0.00059</td>\n",
+       "      <td>-0.003746</td>\n",
+       "      <td>0.601672</td>\n",
+       "      <td>0.067</td>\n",
+       "      <td>0.081745</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           n      r          CI95%     r2  adj_r2     p-val   BF10  power\n",
-       "pearson  464  0.057  [-0.03, 0.15]  0.003  -0.001  0.223435  0.122   0.23"
+       "           n         r          CI95%       r2    adj_r2     p-val   BF10  \\\n",
+       "pearson  464 -0.024295  [-0.12, 0.07]  0.00059 -0.003746  0.601672  0.067   \n",
+       "\n",
+       "            power  \n",
+       "pearson  0.081745  "
       ]
      },
      "metadata": {},
@@ -118,21 +134,24 @@
        "    <tr>\n",
        "      <th>shepherd</th>\n",
        "      <td>464</td>\n",
-       "      <td>24</td>\n",
-       "      <td>-0.002</td>\n",
-       "      <td>[-0.09, 0.09]</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.004</td>\n",
-       "      <td>0.970453</td>\n",
-       "      <td>0.05</td>\n",
+       "      <td>23</td>\n",
+       "      <td>-0.03779</td>\n",
+       "      <td>[-0.13, 0.05]</td>\n",
+       "      <td>0.001428</td>\n",
+       "      <td>-0.002904</td>\n",
+       "      <td>0.428578</td>\n",
+       "      <td>0.128344</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            n  outliers      r          CI95%   r2  adj_r2     p-val  power\n",
-       "shepherd  464        24 -0.002  [-0.09, 0.09]  0.0  -0.004  0.970453   0.05"
+       "            n  outliers        r          CI95%        r2    adj_r2     p-val  \\\n",
+       "shepherd  464        23 -0.03779  [-0.13, 0.05]  0.001428 -0.002904  0.428578   \n",
+       "\n",
+       "             power  \n",
+       "shepherd  0.128344  "
       ]
      },
      "metadata": {},
@@ -147,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,21 +204,24 @@
        "    <tr>\n",
        "      <th>pearson</th>\n",
        "      <td>412</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.011371</td>\n",
        "      <td>[-0.09, 0.11]</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.005</td>\n",
-       "      <td>0.839647</td>\n",
+       "      <td>0.000129</td>\n",
+       "      <td>-0.00476</td>\n",
+       "      <td>0.818006</td>\n",
        "      <td>0.063</td>\n",
-       "      <td>0.055</td>\n",
+       "      <td>0.056053</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           n     r          CI95%   r2  adj_r2     p-val   BF10  power\n",
-       "pearson  412  0.01  [-0.09, 0.11]  0.0  -0.005  0.839647  0.063  0.055"
+       "           n         r          CI95%        r2   adj_r2     p-val   BF10  \\\n",
+       "pearson  412  0.011371  [-0.09, 0.11]  0.000129 -0.00476  0.818006  0.063   \n",
+       "\n",
+       "            power  \n",
+       "pearson  0.056053  "
       ]
      },
      "metadata": {},
@@ -240,21 +262,24 @@
        "    <tr>\n",
        "      <th>shepherd</th>\n",
        "      <td>412</td>\n",
-       "      <td>25</td>\n",
-       "      <td>-0.024</td>\n",
-       "      <td>[-0.12, 0.07]</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>-0.004</td>\n",
-       "      <td>0.638975</td>\n",
-       "      <td>0.077</td>\n",
+       "      <td>24</td>\n",
+       "      <td>-0.051335</td>\n",
+       "      <td>[-0.15, 0.05]</td>\n",
+       "      <td>0.002635</td>\n",
+       "      <td>-0.002242</td>\n",
+       "      <td>0.313171</td>\n",
+       "      <td>0.180152</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            n  outliers      r          CI95%     r2  adj_r2     p-val  power\n",
-       "shepherd  412        25 -0.024  [-0.12, 0.07]  0.001  -0.004  0.638975  0.077"
+       "            n  outliers         r          CI95%        r2    adj_r2  \\\n",
+       "shepherd  412        24 -0.051335  [-0.15, 0.05]  0.002635 -0.002242   \n",
+       "\n",
+       "             p-val     power  \n",
+       "shepherd  0.313171  0.180152  "
       ]
      },
      "metadata": {},
@@ -291,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
