Fixed ordering in the D3 figures

--- a/notebooks/6 Compile figures.ipynb
+++ b/notebooks/6 Compile figures.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n<div class=\"barchart\"\n    data-name=\"Judgement of Memory\"\n    data-groups=\"Designers;Non-designers\"\n    data-options=\"Arial;Sans Forgetica\"\n    data-values=\"58.54716981132076,52.528301886792455;54.5,53.45454545454545\"\n    data-errors=\"2.7503220602725698,3.1709406896792705;3.2804920220870444,3.0839992406854035\"\n    ></div>\n\n"
+      "\n<div class=\"barchart\"\n    data-name=\"Judgement of Memory\"\n    data-groups=\"Designers;Non-designers\"\n    data-options=\"Arial;Sans Forgetica\"\n    data-values=\"58.547,54.5;52.528,53.455;\"\n    data-errors=\"2.75,3.28;3.171,3.084;\"\n    ></div>\n\n"
      ]
     }
    ],
@@ -50,25 +50,25 @@
     "# only in Study #1, lexical task\n",
     "\n",
     "sid = 1\n",
-    "groups = [\"Designer\", \"Non-designer\"]\n",
     "options = [\"arial\", \"sansforgetica\"]\n",
+    "groups = [\"designer\", \"non-designer\"]\n",
     "metric= \"JoM\"\n",
     "\n",
     "# values and options are entered as: \n",
     "# option 1 group 1, option 2 group 1; option 1 group 2, option 2 group 2; etc.\n",
-    "values = [[], []]\n",
-    "errors = [[], []]\n",
+    "values = \"\"\n",
+    "errors = \"\"\n",
     "\n",
     "global_cond = (da[\"StudyID\"] == sid) & (da[\"Type\"] == \"lexical\")\n",
-    "for i, group in enumerate(groups):\n",
-    "    group_cond = (da[\"isDesigner\"] == (group == \"Designer\"))\n",
-    "    for option in options:\n",
-    "        option_cond = (da[\"Font\"] == option)\n",
+    "for option in options:\n",
+    "    option_cond = (da[\"Font\"] == option)\n",
+    "    for i, group in enumerate(groups):\n",
+    "        group_cond = (da[\"isDesigner\"] == (group == \"designer\"))\n",
     "        r = da[global_cond & group_cond & option_cond][metric]\n",
-    "        values[i].append(r.mean())\n",
-    "        errors[i].append(r.sem())\n",
-    "values = [\",\".join([str(v) for v in vals]) for vals in values]\n",
-    "errors = [\",\".join([str(e) for e in errs]) for errs in errors]\n",
+    "        values += str(round(r.mean(), 3)) + \",\"\n",
+    "        errors += str(round(r.sem(), 3)) + \",\"\n",
+    "    values = values[:-1] + \";\"\n",
+    "    errors = errors[:-1] + \";\"\n",
     "\n",
     "s = \"\"\"\n",
     "<div class=\"barchart\"\n",
@@ -82,13 +82,13 @@
     "\n",
     "# optionally, save to file\n",
     "#with open(\"report1_figure4_JoM-by-design-training.html\", \"w\") as f:\n",
-    "#    f.write(s % (\";\".join(values), \";\".join(errors)))\n",
-    "print(s % (\";\".join(values), \";\".join(errors)))\n"
+    "#    f.write(s % (values, errors))\n",
+    "print(s % (values, errors))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -97,7 +97,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n<div class=\"barchart\"\n    data-name=\"Response time\"\n    data-groups=\"Words;Non-words\"\n    data-options=\"Arial;Sans Forgetica\"\n    data-values=\"7.429775501485782,7.529851240089477;7.948163912520996,8.088647473751825\"\n    data-errors=\"0.012271084633388775,0.01352962380380366;0.015217161040351921,0.01661112300193002\"\n    data-offset=\"7\"\n    ></div>\n\n"
+      "\n<div class=\"barchart\"\n    data-name=\"Response time\"\n    data-groups=\"Words;Non-words\"\n    data-options=\"Arial;Sans Forgetica\"\n    data-values=\"7.43,7.948;7.53,8.089;\"\n    data-errors=\"0.012,0.015;0.014,0.017;\"\n    data-offset=\"7\"\n    ></div>\n\n"
      ]
     }
    ],
@@ -106,25 +106,25 @@
     "# only in Study #1, lexical task\n",
     "\n",
     "sid = 1\n",
-    "groups = [\"Word\", \"Non-word\"]\n",
     "options = [\"arial\", \"sansforgetica\"]\n",
+    "groups = [\"word\", \"non-word\"]\n",
     "metric = \"RTnorm\"\n",
     "\n",
     "# values and options are entered as: \n",
     "# option 1 group 1, option 2 group 1; option 1 group 2, option 2 group 2; etc.\n",
-    "values = [[], []]\n",
-    "errors = [[], []]\n",
+    "values = \"\"\n",
+    "errors = \"\"\n",
     "\n",
     "global_cond = (d[\"StudyID\"] == sid) & (d[\"Type\"] == \"lexical\")\n",
-    "for i, group in enumerate(groups):\n",
-    "    group_cond = (d[\"Category\"] == group.lower())\n",
-    "    for option in options:\n",
-    "        option_cond = (d[\"Font\"] == option) \n",
+    "for option in options:\n",
+    "    option_cond = (d[\"Font\"] == option) \n",
+    "    for i, group in enumerate(groups):\n",
+    "        group_cond = (d[\"Category\"] == group)\n",
     "        r = d[global_cond & group_cond & option_cond][metric]\n",
-    "        values[i].append(r.mean())\n",
-    "        errors[i].append(r.sem())\n",
-    "values = [\",\".join([str(v) for v in vals]) for vals in values]\n",
-    "errors = [\",\".join([str(e) for e in errs]) for errs in errors]\n",
+    "        values += str(round(r.mean(), 3)) + \",\"\n",
+    "        errors += str(round(r.sem(), 3)) + \",\"\n",
+    "    values = values[:-1] + \";\"\n",
+    "    errors = errors[:-1] + \";\"\n",
     "\n",
     "s = \"\"\"\n",
     "<div class=\"barchart\"\n",
@@ -139,8 +139,8 @@
     "\n",
     "# optionally, save to file\n",
     "#with open(\"report1_figure5_RTs-by-word-type.html\", \"w\") as f:\n",
-    "#    f.write(s % (\";\".join(values), \";\".join(errors)))\n",
-    "print(s % (\";\".join(values), \";\".join(errors)))\n",
+    "#    f.write(s % (values, errors))\n",
+    "print(s % (values, errors))\n",
     "\n"
    ]
   },
